--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <div class="main-container" id="main-container">
 	<label>main-container</label>
 	<app-navigation 
-		[sheetNames]="excelDb.sheetNames"
-		[tableNames]="excelDb.tableNames"
+		[pages]="pages"
 	></app-navigation>
 	<router-outlet></router-outlet>
 	
