--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 	<app-navigation 
 		[pages]="pages"
 	></app-navigation>
-	<router-outlet></router-outlet>
-	
+	<section class="content">
+		<router-outlet></router-outlet>
+	</section>
 </div>
