--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-<div class="main-container" id="main-container">
+<div class="main-container max-container" id="main-container">
 	<label>main-container</label>
 	<app-navigation 
 		[pages]="pages"
 	></app-navigation>
-	<section class="content">
-		<router-outlet></router-outlet>
-	</section>
+	<router-outlet></router-outlet>
 </div>
