--- a/src/app/misc/data-table/data-table.component.css
+++ b/src/app/misc/data-table/data-table.component.css
@@ -1,6 +1,11 @@
 div.table-container{
-	width:100%;
-	height:100%;
 	position:absolute;
 	margin-top:5px;
+}
+
+.ag-theme-alpine {
+	--ag-grid-size: 3px;
+	--ag-list-item-height: 20px;
+	--ag-font-size: 10px;
+    --ag-font-family: Arial;
 }
