--- a/src/app/misc/data-table/data-table.component.html
+++ b/src/app/misc/data-table/data-table.component.html
@@ -1,11 +1,18 @@
-<div class="table-container">
-	<ag-grid-angular
-		style="width: 100%; height: 100%"
-		class="ag-theme-alpine"
-		[columnDefs]="collumnDefs"
-		[rowData]="processedData"
-		[defaultColDef]="defaultColDef"
-		[pagination]="true"
-		[paginationPageSize]=100		
-	></ag-grid-angular>
+<button (click)="aGridTest()">test</button>
+<div id="gridTable" class="max-container"
+	[style.width]="containerStyle.width"
+	[style.height]="containerStyle.height"
+>
+	<div style="display: flex; flex-direction: row; height: 100%;">
+		<div style=" overflow: hidden; flex-grow: 1">
+		  <ag-grid-angular
+			style="width: 100%; height: 100%;"
+			class="ag-theme-alpine"
+			[gridOptions]="gridOptions"
+		  ></ag-grid-angular>
+		</div>
+	<div style="background-color:#ccc; padding: 2rem">right side column</div>
+  </div>
+	
 </div>
+
