--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'ag-grid-community/styles/ag-grid.css';
 @import 'ag-grid-community/styles/ag-theme-alpine.css';
-html, body {
-    height: 100%;
-	width:100%;
+html,body{
+	box-sizing: border-box;
+	-webkit-overflow-scrolling: touch;
+}
+
+
+html {
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 0;
+	margin: 0;
+	overflow: auto;
+	height: 100%;
+	width: 100%;
 }
 
 body {
+	padding:0;
+	margin: 10px;
 	min-height: 100vh;
-    margin: 0;
-	box-sizing: border-box;
+	overflow: auto;
+}
+
+div.max-container{
+	height: 100%;
+	width: 100%;
+	box-sizing:border-box;
 }
