--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="main-container max-container" id="main-container">
+<div class="main-container" id="main-container">
 	<label>main-container</label>
 	<app-navigation 
 		[pages]="pages"
