--- a/src/app/misc/data-table/data-table.component.html
+++ b/src/app/misc/data-table/data-table.component.html
@@ -1,5 +1,4 @@
-<button (click)="aGridTest()">test</button>
-<div id="gridTable" class="max-container"
+<div id="gridTable" class="max-container table-container"
 	[style.width]="containerStyle.width"
 	[style.height]="containerStyle.height"
 >
@@ -11,7 +10,7 @@
 			[gridOptions]="gridOptions"
 		  ></ag-grid-angular>
 		</div>
-	<div style="background-color:#ccc; padding: 2rem">right side column</div>
+	<!--<div style="background-color:#ccc; padding: 2rem">right side column</div>-->
   </div>
 	
 </div>
