--- a/src/app/import/import.component.html
+++ b/src/app/import/import.component.html
@@ -1,14 +1,12 @@
-<div class="max-container">
+<div>
 	<app-upload 
 		[currentPage]="currentPage"
 		[uploadHandler]="post"
 	></app-upload>
-	<button (click)="deleteAll(currentPage)">delete</button>
 </div>
-<div class="max-container">
+<div class="placeholder">
 	<app-data-table *ngIf="isLoaded else noCourses" [data]="jsonData"></app-data-table>
 	<ng-template #noCourses>
 		<h1>No courses available.</h1>
 	</ng-template>
-	
 </div>
