--- a/src/app/import/import.component.html
+++ b/src/app/import/import.component.html
@@ -3,9 +3,10 @@
 		[currentPage]="currentPage"
 		[uploadHandler]="post"
 	></app-upload>
+	<button (click)="deleteAll(currentPage)">deleteAll</button>
 </div>
 <div class="placeholder">
-	<app-data-table *ngIf="isLoaded else noCourses" [data]="jsonData"></app-data-table>
+	<app-data-table *ngIf="isLoaded else noCourses" [deleteHandler]="precisionDelete" [data]="jsonData"></app-data-table>
 	<ng-template #noCourses>
 		<h1>No courses available.</h1>
 	</ng-template>
