--- a/src/app/misc/data-table/data-table.component.html
+++ b/src/app/misc/data-table/data-table.component.html
@@ -1,14 +1,17 @@
+<div style="margin-top:5px" class="table-button-container">
+	<button (click)="delete(selectedRowIndex)">Delete</button>
+</div>
 <div id="gridTable" class="max-container table-container"
 	[style.width]="containerStyle.width"
 	[style.height]="containerStyle.height"
 >
 	<div style="display: flex; flex-direction: row; height: 100%;">
 		<div style=" overflow: hidden; flex-grow: 1">
-		  <ag-grid-angular
-			style="width: 100%; height: 100%;"
-			class="ag-theme-alpine"
-			[gridOptions]="gridOptions"
-		  ></ag-grid-angular>
+			<ag-grid-angular
+				style="width: 100%; height: 100%;"
+				class="ag-theme-alpine"
+				[gridOptions]="gridOptions"
+			></ag-grid-angular>
 		</div>
 	<!--<div style="background-color:#ccc; padding: 2rem">right side column</div>-->
   </div>
