--- a/src/app/misc/data-table/data-table.component.html
+++ b/src/app/misc/data-table/data-table.component.html
@@ -1,7 +1,7 @@
 <div style="margin-top:5px" class="table-button-container">
-	<button (click)="deleteHandler(selectedRowId)">Delete</button>
+	<button (click)="deleteHandler(selectedDataId)">Delete</button>
 </div>
-<div id="gridTable" class="max-container table-container"
+<div id="gridTable" class="max-container table-container" style="width:50%"
 	[style.width]="containerStyle.width"
 	[style.height]="containerStyle.height"
 >
