--- a/src/app/misc/data-table/data-table.component.css
+++ b/src/app/misc/data-table/data-table.component.css
@@ -8,3 +8,11 @@ div.table-container{
 	margin-top:5px;
 	margin-bottom:5px;
 }
+
+button.nav-states-handler-button {
+	
+}
+
+button.active {
+	background-color:gray;
+}
