--- a/src/app/misc/dynamic-modal/dynamic-modal.component.html
+++ b/src/app/misc/dynamic-modal/dynamic-modal.component.html
@@ -1,12 +1,12 @@
-					`<div class="modal-header">
-						<h4 class="modal-title" id="modal-basic-title">Profile update</h4>
-						<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
-					</div>
-					<div class="modal-body">
-						`as`
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>
-					</div>`
+<div class="modal-header">
+	<h4 class="modal-title" id="modal-basic-title">{{modalTitle}}</h4>
+	<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+</div>
+<div class="modal-body">
+	<ng-template [ngTemplateOutlet]="modalBody"></ng-template>
+</div>
+<div class="modal-footer">
+	<ng-template [ngTemplateOutlet]="modalFooter"></ng-template>
+</div>`
 
 
