--- a/src/app/import/import.component.html
+++ b/src/app/import/import.component.html
@@ -40,14 +40,33 @@
 		[modalBody]="modalBody"
 		[modalFooter]="modalFooter"
 		[modal]="modal"
+		[modalRef]="modalRef"
 		[selectedDataId]="selectedDataId"
 	></app-dynamic-modal>
 </ng-template>
 
 <ng-template #modalBody>
+	<div>
+		<div>
+			<p><label>Seri</label> : <span>{{modalData.Seri}}</span><p>
+			<p><label>Jenis</label> : <span>{{modalData.Jenis}}</span><p>
+			<p><label>Qty</label> : <span>{{modalData.Qty}}</span><p>
+			<p><label>Kode</label> : <span>{{modalData.Kode}}</span><p>
+			<p><label>Ctn</label> : <span>{{modalData.Ctn}}</span><p>
+		</div>
+		<div>
+			<h6>Riwayat Transaksi</h6>
+			<div style="margin-left:20%">
+				<span *ngFor="let item of modalData.transaction">
+					<hr>
+					<p *ngFor="let pointer of Object.keys(item)"><label>{{pointer}}</label> : {{item[pointer]}}</p>
+				</span>
+			</div>
+		</div>
+	</div>
 	
-
 </ng-template>
 <ng-template #modalFooter>
+	<button type="button" class="btn btn-outline-dark" (click)="closeModal()">Save</button>
 	<button type="button" class="btn btn-outline-dark" (click)="closeModal()">Save</button>
 </ng-template>
