--- a/src/app/import/import.component.html
+++ b/src/app/import/import.component.html
@@ -1,7 +1,7 @@
 <div #a>
 	<app-upload 
 		[currentPage]="currentPage"
-		[uploadHandler]="post"
+		[uploadHandler]="postExcel"
 	></app-upload>
 	<button (click)="deleteAll(currentPage)">deleteAll</button>
 	<!--<button (click)="alert('testButtonClicked')">TEST</button>-->
