--- a/src/app/import/import.component.html
+++ b/src/app/import/import.component.html
@@ -49,9 +49,39 @@
 					<input 
 						(input)="gridSearch($event)"
 						type="text" class="form-control form-control-sm" placeholder="Search.." aria-describedby="button-addon2">
-					<button (click)="_modal.filterModal.open(filterModal,excludeCol(gridOptions.rowData,['_id','Ctn']))" class="btn btn-outline-secondary btn-sm" type="button" id="button-addon2">Filter</button>
+						<!--
+							<button (click)="_modal.filterModal.open(filterModal,excludeCol(_modal.filterModal.getDisplayData(),_modal.filterModal.excludedColArray))" class="btn btn-outline-secondary btn-sm" type="button" id="button-addon2">Filter</button>
+						-->
+						<button (click)="_modal.filterModal.open()"class="btn btn-outline-secondary btn-sm" type="button" id="button-addon2">Filter</button>
+						<button (click)="_modal.filterModal.resetFilter()" class="btn btn-outline-secondary btn-sm" type="button" id="button-addon2">Reset Filter</button>
 				</div>
 			</div>
+		</div>
+		<div id="nonModalFilterId">
+			<ng-container *ngIf="!!_modal.filterModal.filterElementIsActive;then filterModalBody">
+			
+			</ng-container>
+			<ng-template #filterModalBody>
+				<div class="container">
+					<div class="row">
+						<div class="col" *ngFor="let pointer of Object.keys(_modal.filterModal.filterData)">
+							<label>{{pointer}}</label>
+							<select class="form-select form-select-sm">
+									<option 
+										[attr.selected]="this._modal.filterModal.getFilterModel()[pointer]?null:'selected'"
+									>-</option>
+									<ng-container *ngFor="let item of _modal.filterModal.filterData[pointer]">
+										<option 
+											[attr.selected]="this._modal.filterModal.getFilterModel()[pointer]?.filter===item?'selected':null"
+											(click)="_modal.filterModal.addFilter(pointer,$event)"
+											value={{item}} 
+										>{{item}}</option>
+									</ng-container>
+							</select>
+						</div>
+					</div>
+				</div>
+			</ng-template>
 		</div>
 		<app-data-table *ngIf="isLoaded && dataIsNotEmpty &&!errMessage" 
 			[gridOptions]="gridOptions"
@@ -70,6 +100,7 @@
 			<h2>{{errMessage.status}}</h2>
 			<pre>{{errMessage.stack}}</pre>
 		</div>
+		
 		<ng-template #filterModal let-filterModal let-c="close" let-d="dismiss">
 			<app-dynamic-modal 
 				[modalBody]="filterModalBody"
@@ -83,12 +114,16 @@
 						<div class="col" *ngFor="let pointer of Object.keys(_modal.filterModal.filterData)">
 							<label>{{pointer}}</label>
 							<select class="form-select form-select-sm">
-								<option selected>-</option>
-								<option 
-									*ngFor="let item of _modal.filterModal.filterData[pointer]"
-									(click)="_modal.filterModal.changeFIlter(pointer,$event)"
-									value={{item}} 
-								>{{item}}</option>
+									<option 
+										[attr.selected]="this._modal.filterModal.getFilterModel()[pointer]?null:'selected'"
+									>-</option>
+									<ng-container *ngFor="let item of _modal.filterModal.filterData[pointer]">
+										<option 
+											[attr.selected]="this._modal.filterModal.getFilterModel()[pointer]?.filter===item?'selected':null"
+											(click)="_modal.filterModal.addFilter(pointer,$event)"
+											value={{item}} 
+										>{{item}}</option>
+									</ng-container>
 							</select>
 						</div>
 					</div>
@@ -99,6 +134,7 @@
 				<button type="button" class="btn btn-outline-dark" (click)="c('close')">Close</button>
 			</ng-template>
 		</ng-template>
+		
 	</div>
 </ng-template>
 <ng-container *ngTemplateOutlet="mainContent"></ng-container>
