--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="main-container" id="main-container">
-	<app-navigation 
-		[pages]="pages"
-	></app-navigation>
-	<router-outlet></router-outlet>
+
+	<router-outlet
+	>
+	</router-outlet>
 </div>
